Fix: Increase menu-trigger label spacing

--- a/wp-content/themes/dunkerskulturhus/assets/source/sass/component/navigation/_mega-menu.scss
+++ b/wp-content/themes/dunkerskulturhus/assets/source/sass/component/navigation/_mega-menu.scss
@@ -32,7 +32,7 @@
     }
 
     > span + span {
-        margin-left: 8px;
+        margin-left: 12px;
     }
 }
 
